infrastructure/kubernetes/istio/peerauth-temporal-strict.yaml
# Set temporal namespace to STRICT mTLS for consistency
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: default
  namespace: temporal
spec:
  mtls:
    mode: STRICT
